--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Roboto:ital,wght@1,100&family=Ubuntu:ital,wght@1,300&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Solarte Store</title>
   </head>
   <body>
     <div id="root"></div>
